<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/climabackground"
    android:orientation="vertical"
    tools:context=".WeatherDetailActivity">
    <mx.com.darklider.ultimateclimaviewer.customViews.VisualDataDisplayer
        android:id="@+id/vdd_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/medium_margin"
        android:layout_marginBottom="@dimen/medium_margin"
        app:description="@string/date"/>


    <mx.com.darklider.ultimateclimaviewer.customViews.VisualDataDisplayer
        android:id="@+id/vdd_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/medium_margin"
        app:description="@string/forecast"/>

    <mx.com.darklider.ultimateclimaviewer.customViews.VisualDataDisplayer
        android:id="@+id/vdd_temp_min"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/medium_margin"
        app:description="@string/min_temp"/>

    <mx.com.darklider.ultimateclimaviewer.customViews.VisualDataDisplayer
        android:id="@+id/vdd_temp_max"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/medium_margin"
        app:description="@string/max_temp"/>

    <mx.com.darklider.ultimateclimaviewer.customViews.VisualDataDisplayer
        android:id="@+id/vdd_pressure"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/medium_margin"
        app:description="@string/pressure"/>

    <mx.com.darklider.ultimateclimaviewer.customViews.VisualDataDisplayer
        android:id="@+id/vdd_humidity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/medium_margin"
        app:description="@string/humidity"
        />



</LinearLayout>