<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<android.support.constraint.ConstraintLayout

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/climabackground"
    tools:context=".GetWeatherActivity">
<TextView
    android:id="@+id/tv_header"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    android:textSize="@dimen/big_text_size"
    android:text="@string/weather_header"
    android:textColor="@android:color/white"
    />
    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv_results"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="@dimen/medium_margin"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/btn_get_weather"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/vdd_location"/>

    <mx.com.darklider.ultimateclimaviewer.customViews.VisualDataDisplayer
        android:id="@+id/vdd_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:description="@string/current_location"
        app:data="@string/default_location"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        >

    </mx.com.darklider.ultimateclimaviewer.customViews.VisualDataDisplayer>

    <Button
        android:id="@+id/btn_get_weather"
        style="@style/CLimaButton"
        android:layout_marginStart="8dp"
        android:text="@string/get_weather"
        app:layout_constraintTop_toBottomOf="@+id/rv_results"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />



</android.support.constraint.ConstraintLayout>

    <include
        android:id="@+id/bottomsheet_menu_weather"
        layout="@layout/bottomsheet_menu"
        android:visibility="gone"/>
</android.support.design.widget.CoordinatorLayout>